<resources>
    <string name="app_name">Longtech</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="judulvehicle">Kendaraan Kerja</string>
    <string name="judulshiftvehicle">Shift Kendaraan Kerja</string>
    <string name="hintvehicle">Pilih Kendaraan Kerja</string>
    <string name="juduldesc">Catatan Tambahan</string>
    <string name="bbmgoodang">Gudang BBM</string>
    <string name="hintgoodang">Pilih Gudang BBM</string>
    <string name="judulopr">Driver / Operator</string>

    <!--Button-->
    <string name="backbtn">KEMBALI</string>
    <string name="okbtn">SIMPAN</string>

    <string name="judul_hasilgis">HASIL VERIFICATOR <font color='#FF0000'>*</font></string>
    <string name="hint_activitygis">Kegiatan Verifikasi<font color='#FF0000'>*</font></string>
    <string name="hint_lokasigis">Lokasi<font color='#FF0000'>*</font></string>
    <string name="hint_hasilgis">Hasil Kerja<font color='#FF0000'>*</font></string>
</resources>