<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFECEC"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".menuinventory.PengeluaranBBM">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeaderPengeluaranBBM"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/tbl_lr_bottom"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="PENGELUARAN BBM"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/tombol"
        android:backgroundTint="@color/white"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="Tanggal Pengeluaran BBM"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:endIconDrawable="@drawable/ic_baseline_calendar_24"
                app:endIconMode="custom"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTodayDateKeluarBBM"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="none"
                    android:editable="false"
                    android:paddingStart="12dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:textColorHint="#808080"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/judulvehicle"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:endIconMode="dropdown_menu"
                app:hintEnabled="false">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/acVehicleKeluarBBM"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/hintvehicle"
                    android:paddingStart="12dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:textColorHint="#808080"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="Jumlah Pengeluaran BBM"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:endIconDrawable="@drawable/ic_baseline_gas_station_24"
                app:endIconMode="custom"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLiterKeluarBBM"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="Jumlah Pengeluaran BBM"
                    android:inputType="number"
                    android:paddingStart="12dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:textColorHint="#808080"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/juduldesc"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNoteKeluarBBM"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="top"
                    android:hint="Deskripsi Pengeluaran (Optional)"
                    android:paddingStart="12dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:textColorHint="#808080"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelPengeluaranBBM"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="KEMBALI"
            android:textStyle="bold"
            android:textSize="16sp"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSimpanPengeluaranBBM"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:onClick="submitPengeluaranBBM"
            android:insetTop="0dp"
            android:textSize="16sp"
            android:insetBottom="0dp"
            android:text="SIMPAN"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </LinearLayout>

</LinearLayout>