<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EFECEC"
    android:focusableInTouchMode="true"
    tools:context=".menuworkshop.LaporanPerbaikan">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:background="@drawable/tbl_lr_bottom"
        android:backgroundTint="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="LAPORAN PERBAIKAN PERAWATAN"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:padding="8dp"
        android:background="@drawable/tombol"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="dropdown_menu"
            android:hint="@string/judulvehicle">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/acVehicleLaporanService"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:singleLine="true"
                android:textColorHint="#808080"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="6dp"
            android:hint="Lokasi Perbaikan"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_baseline_location_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLokLaporanService"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColorHint="#808080"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Deskripsi Kegiatan Perbaikan"
            android:layout_marginTop="6dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etKegiatanLaporanService"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingStart="12dp"
                android:gravity="top"
                android:paddingTop="10dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLaporanPerbaikan"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/tbl_lr_top"
        android:backgroundTint="@color/white"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MATERIAL" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MEKANIK" />

    </com.google.android.material.tabs.TabLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="4dp"
        android:background="?android:attr/listDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lvMekanikLaporanService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:visibility="gone"
        android:background="@drawable/tbl_lr_bottom"
        android:backgroundTint="@color/white"
        android:scrollbars="vertical"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMaterialLaporanService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/tbl_lr_bottom"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="4dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPlaceholderLvMaterialService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_baseline_find_in_page_48"
            android:drawablePadding="12dp"
            android:gravity="center"
            android:text="Anda belum\nmenginput material"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btnAddMaterialLaporanService"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="25dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lvMaterialLaporanService"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddMaterialLaporanService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:onClick="addMaterialService"
            app:backgroundTint="#007042"
            app:maxImageSize="40dp"
            app:rippleColor="#DCDCDC"
            app:srcCompat="@android:drawable/ic_input_add"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBackLaporanService"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/backbtn"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="submitLaporanPerbaikan"
            android:text="@string/okbtn"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>